@@ -8,7 +8,6 @@
     <script src="environment.js"></script>
     <script src="basin.js"></script>
     <script src="sketch.js"></script>
-    <title>Very Sad HHW Thing</title>
     <link type="text/css" rel="stylesheet" href="../experiments.css" />
   </head>
   <body>
